feat: ✨ implement metrics monitor
